--- a/polymer-card-contact.html
+++ b/polymer-card-contact.html
@@ -17,18 +17,22 @@
     </style>
     <h2>[[title]]</h2>
 
-    <paper-card image="demo/donuts.png">
+    <paper-card image="{{user.picture.medium}}">
       <div class="card-content">
-         <img src="{{user.picture.large}}">
         <div class="cafe-header">
-          {{user.name}} {{user.last}}
+          {{fullName}}
         </div>
         <p><label>Phone: </label><span>{{ user.phone }}</span></p>
         <p><label>Email: </label><span>{{ user.email }}</span></p>
       </div>
       <div class="card-actions">
         <div class="horizontal justified">
-          <paper-icon-button icon="favorite-border"></paper-icon-button>
+          <template is="dom-if" if="{{!user.favorite}}">
+            <paper-icon-button icon="favorite-border" on-tap="_toggleFavorite"></paper-icon-button>
+          </template>
+          <template is="dom-if" if="{{!user.favorite}}">
+            <paper-icon-button icon="favorite" on-tap="_toggleFavorite"></paper-icon-button>
+          </template>
         </div>
       </div>
     </paper-card>
@@ -45,7 +49,24 @@
           type: String,
           value: 'Contact card',
         },
+        user:{
+          type:Object,
+        },
+        fullName: {
+         type: String,
+         computed: 'computeFullName(user.name, user.last)'
+       },
+
+
       },
+      computeFullName: function(first, last) {
+        return first + ' ' + last;
+      }
+
+      _toggleFavorite: function() {
+        //console.log('favorite' + user.favorite);
+        this.fire('toggleFavorite', this.user);
+      }
 
     });
   </script>
