--- a/polymer-card-contact.html
+++ b/polymer-card-contact.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-card/paper-card.html">
+<link rel="import" href="../paper-card/paper-icon-button">
 <!--
 `polymer-card-contact`
 
