--- a/polymer-card-contact.html
+++ b/polymer-card-contact.html
@@ -1,5 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-card/paper-card.html">
+<link rel="import" href="../iron-icons/av-icons.html">
+
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <!--
 `polymer-card-contact`
