--- a/polymer-card-contact.html
+++ b/polymer-card-contact.html
@@ -19,20 +19,20 @@
     </style>
     <h2>[[title]]</h2>
 
-    <paper-card image="{{user.picture.medium}}">
+    <paper-card image="{{picture}}">
       <div class="card-content">
         <div class="cafe-header">
           {{fullName}}
         </div>
-        <p><label>Phone: </label><span>{{ user.phone }}</span></p>
-        <p><label>Email: </label><span>{{ user.email }}</span></p>
+        <p><label>Phone: </label><span>{{ phone }}</span></p>
+        <p><label>Email: </label><span>{{ email }}</span></p>
       </div>
       <div class="card-actions">
         <div class="horizontal justified">
-          <template is="dom-if" if="{{!user.favorite}}">
+          <template is="dom-if" if="{{!favorite}}">
             <paper-icon-button icon="favorite-border" on-tap="_toggleFavorite"></paper-icon-button>
           </template>
-          <template is="dom-if" if="{{user.favorite}}">
+          <template is="dom-if" if="{{favorite}}">
             <paper-icon-button icon="favorite" on-tap="_toggleFavorite"></paper-icon-button>
           </template>
         </div>
@@ -51,22 +51,46 @@
           type: String,
           value: 'Contact card',
         },
-        user:{
+        /*user:{
           type:Object,
           value: { phone: 11, name: 'Mr. Nice', last:"last", favorite:false, email: 'contact@mail.com'},
+        },*/
+        name:{
+          type: String,
+          value: 'Jose',
+        },
+        last:{
+          type: String,
+          value:'Perez',
+        },
+        favorite: {
+          type: String,
+          notify: true, //this.fire('changed', this.favorite);
+          value: false,
+        },
+        email: {
+          type: String,
+          value: 'contact@mail.com',
+        },
+        phone: {
+          type: String,
+          value: 11,
+        },
+        picture:{
+          type: String,
+          value: 'https://randomuser.me/api/portraits/med/men/83.jpg',
         },
         fullName: {
          type: String,
-         computed: 'computeFullName(user.name, user.last)'
+         computed: 'computeFullName(name, last)',
        },
+      },
+      _toggleFavorite: function(event, param) {
+        this.favorite = !this.favorite;
       },
       computeFullName: function(first, last) {
         return first + ' ' + last;
       },
-      _toggleFavorite: function() {
-        //console.log('favorite' + user.favorite);
-        this.fire('toggleFavorite', this.user);
-      }
 
     });
   </script>
