--- a/polymer-card-contact.html
+++ b/polymer-card-contact.html
@@ -16,7 +16,7 @@
       :host {
         display: block;
       }
-      .card{
+      polyper-card-contact{
         display: inline-block;
       }
     </style>
