added some change

--- a/polymer-card-contact.html
+++ b/polymer-card-contact.html
@@ -16,11 +16,9 @@
       :host {
         display: block;
       }
-      polyper-card-contact{
-        display: inline-block;
-      }
+
     </style>
-    <h2>{{fullName}}</h2>
+    <h2>{{name}} {{last}}</h2>
 
     <paper-card image="{{picture}}" class="card">
       <div class="card-content">
