trying computed property again

--- a/polymer-card-contact.html
+++ b/polymer-card-contact.html
@@ -18,12 +18,12 @@
       }
 
     </style>
-    <h2>{{name}} {{last}}</h2>
+    <h2>{{fullName}}</h2>
 
     <paper-card image="{{picture}}" class="card">
       <div class="card-content">
-        <p><label>Phone: </label><span>{{ phone }}</span></p>
-        <p><label>Email: </label><span>{{ email }}</span></p>
+        <p><label>Phone: </label><span>{{phone}}</span></p>
+        <p><label>Email: </label><span>{{email}}</span></p>
       </div>
       <div class="card-actions">
         <div class="horizontal justified">
