--- a/polymer-card-contact.html
+++ b/polymer-card-contact.html
@@ -87,10 +87,12 @@
       },
       _toggleFavorite: function(event, param) {
         this.favorite = !this.favorite;
-        this.favoriteIcon = this.favorite ? 'favorite':'favorite-border';
-        this.fire('updateFavorite', {userId: this.id});
+        //this.favoriteIcon = this.favorite ? 'favorite':'favorite-border';
+        //this.fire('updateFavorite'); is not necesary because property notify true on favorite
       },
-
+      _changeIcon: function(newValue, oldValue){
+        return this.favoriteIcon = newValue ? 'favorite':'favorite-border';
+      },
       _computeFullName: function(first, last) {
         return first + ' ' + last;
       },
