--- a/polymer-card-contact.html
+++ b/polymer-card-contact.html
@@ -63,6 +63,7 @@
           type: String,
           notify: true, //this.fire('changed', this.favorite);
           value: undefined,
+          observer: '_changeIcon',
         },
         email: {
           type: String,
